--- a/html/12_calcolo_simbolico.html
+++ b/html/12_calcolo_simbolico.html
@@ -7518,6 +7518,17 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 style="font-size:50px">12: Calcolo simbolico (SimPy)</h1>
+<hr/>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="Introduzione">Introduzione<a class="anchor-link" href="#Introduzione">¶</a></h2><p>In questa sezione, introducciamo la libreria SymPy (SYMbolic Python). Mentre nei calcoli numerici si opera su numeri,  nel calcolo simbolico lavoriamo su variabili generiche.</p>
 <p>La home page di SymPy si trova in  <a href="http://sympy.org/">http://sympy.org/</a>, e fornisce una documentzione completa ed aggiornata sulla libreria.</p>
 <p>Il calcolo simbolico è molto più lento delle operazioni su numeri reali (floating point), e quindi in genere non viene usato per le simulazioni. Tuttavia, è uno strumento potente per la preparazione del codice ed è utile per i conti analitici.</p>
