--- a/html/11_MetodoMontecarlo.html
+++ b/html/11_MetodoMontecarlo.html
@@ -7518,7 +7518,7 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 style="font-size:50px">11: Metodo Monte Carlo</h1>
-<h2 id="Introduzione">Introduzione<a class="anchor-link" href="#Introduzione">¶</a></h2><p>Il termine Metodo Monte Carlo si riferisce a un insieme di tecniche di calcolo e simulazione che si basano sull'uso di numeri casuali.</p>
+<hr/>
 </div>
 </div>
 </div>
@@ -7529,7 +7529,8 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Integrazione-numerica-con-metodo-MC">Integrazione numerica con metodo MC<a class="anchor-link" href="#Integrazione-numerica-con-metodo-MC">¶</a></h2><p>L'idea di usare numeri casuali per calcolare un integrale numerico si basa sul teorema della media in Analisi che afferma che l'integrale  $\int_a^b f(x)\,dx$ è uguale al prodotto della lunghezza (con segno) dell'intervallo di integrazione $(b-a)$ per il valor medio della funzione $f$, $&lt;f&gt;$, nell'intervallo. Il valor medio può essere calcolato
+<h2 id="1.1-Introduzione">1.1 Introduzione<a class="anchor-link" href="#1.1-Introduzione">¶</a></h2><p>Il termine Metodo Monte Carlo si riferisce a un insieme di tecniche di calcolo e simulazione che si basano sull'uso di numeri casuali.</p>
+<h2 id="1.2-Integrazione-numerica-con-metodo-MC">1.2 Integrazione numerica con metodo MC<a class="anchor-link" href="#1.2-Integrazione-numerica-con-metodo-MC">¶</a></h2><p>L'idea di usare numeri casuali per calcolare un integrale numerico si basa sul teorema della media in Analisi che afferma che l'integrale  $\int_a^b f(x)\,dx$ è uguale al prodotto della lunghezza (con segno) dell'intervallo di integrazione $(b-a)$ per il valor medio della funzione $f$, $&lt;f&gt;$, nell'intervallo. Il valor medio può essere calcolato
 facendo la media dei valori di $f$ in un set di punti scelti a caso in $[a,b]$.<br/>
 Esempio: $\int_1^2 x^2 dx = \frac{7}{3}$<br/></p>
 </div>
@@ -7765,7 +7766,7 @@ Risultato esatto: 2.0943951023931953
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Generazione-di-eventi-distribuiti-secondo-una-densit%C3%A0-di-probabilit%C3%A0-fissata">Generazione di eventi distribuiti secondo una densità di probabilità fissata<a class="anchor-link" href="#Generazione-di-eventi-distribuiti-secondo-una-densit%C3%A0-di-probabilit%C3%A0-fissata">¶</a></h2><h3 id="Metodo-hit-and-miss">Metodo hit and miss<a class="anchor-link" href="#Metodo-hit-and-miss">¶</a></h3><p>Supponiamo di avere la seguente distribuzione di probabilità:
+<h2 id="1.3-Generazione-di-eventi-distribuiti-secondo-una-densit%C3%A0-di-probabilit%C3%A0-fissata">1.3 Generazione di eventi distribuiti secondo una densità di probabilità fissata<a class="anchor-link" href="#1.3-Generazione-di-eventi-distribuiti-secondo-una-densit%C3%A0-di-probabilit%C3%A0-fissata">¶</a></h2><h3 id="1.3.1-Metodo-hit-and-miss">1.3.1 Metodo hit and miss<a class="anchor-link" href="#1.3.1-Metodo-hit-and-miss">¶</a></h3><p>Supponiamo di avere la seguente distribuzione di probabilità:
 $$P(x) = \begin{cases} 0.6 \quad x&lt;0.5\\ 1.4 \quad x&gt;0.5 \end{cases}$$</p>
 <div style="padding:20px 20px 20px 150px;">
 <img alt="No description has been provided for this image" src="../Images/stepprobability.png" width="300"/>
@@ -7838,7 +7839,7 @@ rapporto fra i numeri di punti: 2.661764705882353 rapporto atteso=7/3: 2.3333333
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Test-della-generazione-Monte-Carlo-di-punti-secondo-una-distribuzione-data">Test della generazione Monte Carlo di punti secondo una distribuzione data<a class="anchor-link" href="#Test-della-generazione-Monte-Carlo-di-punti-secondo-una-distribuzione-data">¶</a></h3><h4 id="Una-funzione-generica-per-generare-eventi-secondo-una-distribuzione-qualsiasi">Una funzione generica per generare eventi secondo una distribuzione qualsiasi<a class="anchor-link" href="#Una-funzione-generica-per-generare-eventi-secondo-una-distribuzione-qualsiasi">¶</a></h4>
+<h3 id="1.3.2-Test-della-generazione-Monte-Carlo-di-punti-secondo-una-distribuzione-data">1.3.2 Test della generazione Monte Carlo di punti secondo una distribuzione data<a class="anchor-link" href="#1.3.2-Test-della-generazione-Monte-Carlo-di-punti-secondo-una-distribuzione-data">¶</a></h3><h4 id="Una-funzione-generica-per-generare-eventi-secondo-una-distribuzione-qualsiasi">Una funzione generica per generare eventi secondo una distribuzione qualsiasi<a class="anchor-link" href="#Una-funzione-generica-per-generare-eventi-secondo-una-distribuzione-qualsiasi">¶</a></h4>
 </div>
 </div>
 </div>
@@ -8058,7 +8059,7 @@ rapporto fra i numeri di punti: 2.3380845403290684 rapporto atteso=7/3: 2.333333
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Propagazione-dell'errore-con-metodo-MC">Propagazione dell'errore con metodo MC<a class="anchor-link" href="#Propagazione-dell'errore-con-metodo-MC">¶</a></h2>
+<h2 id="1.4-Propagazione-dell'errore-con-metodo-MC">1.4 Propagazione dell'errore con metodo MC<a class="anchor-link" href="#1.4-Propagazione-dell'errore-con-metodo-MC">¶</a></h2>
 </div>
 </div>
 </div>
@@ -8174,7 +8175,7 @@ $$ \frac{\partial g}{\partial T} = \frac{ - 8 \pi^2 L}{T^3},\qquad  \frac{\parti
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Plot-di-controllo">Plot di controllo<a class="anchor-link" href="#Plot-di-controllo">¶</a></h3><p>Nota sulle normalizzazioni:<br/>
+<h3 id="1.4.1-Plot-di-controllo">1.4.1 Plot di controllo<a class="anchor-link" href="#1.4.1-Plot-di-controllo">¶</a></h3><p>Nota sulle normalizzazioni:<br/>
 - Dato un istogramma con $N_{tot}$ valori, i valori in ciascun bin sommano a $N_{tot}$.<br>
 - Se si vuole sovrapporre una gaussiana $g(x)$ all'istogramma bisogna ricordare che: $\int g(x)\,dx = \sum_i g(x_i) w =1$, dove $w$ è la larghezza di ciascun bin. Di conseguenza i valori di $g(x)$ vanno moltiplicati per $w \cdot N_{tot}$ per avere un confronto significativo.</br></p>
 </div>
@@ -8263,7 +8264,7 @@ $$ \frac{\partial g}{\partial T} = \frac{ - 8 \pi^2 L}{T^3},\qquad  \frac{\parti
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Simulazione-di-eventi-complessi-con-metodo-MC">Simulazione di eventi complessi con metodo MC<a class="anchor-link" href="#Simulazione-di-eventi-complessi-con-metodo-MC">¶</a></h2>
+<h2 id="1.5-Simulazione-di-eventi-complessi-con-metodo-MC">1.5 Simulazione di eventi complessi con metodo MC<a class="anchor-link" href="#1.5-Simulazione-di-eventi-complessi-con-metodo-MC">¶</a></h2>
 </div>
 </div>
 </div>
