--- a/html/13_Classi.html
+++ b/html/13_Classi.html
@@ -7518,7 +7518,18 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h1 style="font-size:50px">13: Object Oriented Programming (OOP) e Classi in Python</h1>
-<h2 id="Introduzione">Introduzione<a class="anchor-link" href="#Introduzione">¶</a></h2><p>Questo notebook si basa sulle lezioni 8 e 9 di:
+<hr/>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h2 id="1.1-Introduzione">1.1 Introduzione<a class="anchor-link" href="#1.1-Introduzione">¶</a></h2><p>Questo notebook si basa sulle lezioni 8 e 9 di:
 <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/">https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-0001-introduction-to-computer-science-and-programming-in-python-fall-2016/</a></p>
 <p>Python contiene molti tipi di dati:</p>
 <ul>
@@ -7546,7 +7557,7 @@ a.anchor-link {
 <li><p>'Hello' + 'World' è la procedura che permette di concatenare due stringhe</p>
 </li>
 </ul>
-<h3 id="In-Python-TUTTO-%C3%88-UN-OGGETTO">In Python <strong>TUTTO È UN OGGETTO</strong><a class="anchor-link" href="#In-Python-TUTTO-%C3%88-UN-OGGETTO">¶</a></h3><ul>
+<h3 id="1.1.1-In-Python-TUTTO-%C3%88-UN-OGGETTO">1.1.1 In Python <strong>TUTTO È UN OGGETTO</strong><a class="anchor-link" href="#1.1.1-In-Python-TUTTO-%C3%88-UN-OGGETTO">¶</a></h3><ul>
 <li>ha un <strong>tipo</strong></li>
 <li>può essere <strong>creato</strong></li>
 <li>può essere <strong>manipolato</strong></li>
@@ -7577,7 +7588,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Creare-una-classe">Creare una classe<a class="anchor-link" href="#Creare-una-classe">¶</a></h2>
+<h2 id="1.2-Creare-una-classe">1.2 Creare una classe<a class="anchor-link" href="#1.2-Creare-una-classe">¶</a></h2>
 </div>
 </div>
 </div>
@@ -7611,7 +7622,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Utilizzare-esemplari-della-classe">Utilizzare esemplari della classe<a class="anchor-link" href="#Utilizzare-esemplari-della-classe">¶</a></h2>
+<h2 id="1.3-Utilizzare-esemplari-della-classe">1.3 Utilizzare esemplari della classe<a class="anchor-link" href="#1.3-Utilizzare-esemplari-della-classe">¶</a></h2>
 </div>
 </div>
 </div>
@@ -7689,7 +7700,7 @@ A parte l'uso di <code>self</code> e della notazione <code>.</code> per la chiam
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Come-usare-i-metodi-di-una-classe">Come usare i metodi di una classe<a class="anchor-link" href="#Come-usare-i-metodi-di-una-classe">¶</a></h3>
+<h3 id="1.3.1-Come-usare-i-metodi-di-una-classe">1.3.1 Come usare i metodi di una classe<a class="anchor-link" href="#1.3.1-Come-usare-i-metodi-di-una-classe">¶</a></h3>
 </div>
 </div>
 </div>
@@ -7810,7 +7821,7 @@ Cell <span class="ansi-green-fg">In[18], line 8</span>, in <span class="ansi-cya
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Stampare-un-esemplare-di-una-classe-e-metodo-__str__">Stampare un esemplare di una classe e metodo <code>__str__</code><a class="anchor-link" href="#Stampare-un-esemplare-di-una-classe-e-metodo-__str__">¶</a></h3>
+<h3 id="1.3.2-Stampare-un-esemplare-di-una-classe-e-metodo-__str__">1.3.2 Stampare un esemplare di una classe e metodo <code>__str__</code><a class="anchor-link" href="#1.3.2-Stampare-un-esemplare-di-una-classe-e-metodo-__str__">¶</a></h3>
 </div>
 </div>
 </div>
@@ -8319,7 +8330,7 @@ denominator: 3
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Accedere-e-modificare-i-dati-di-un-esemplare:-getters-and-setters">Accedere e modificare i dati di un esemplare: getters and setters<a class="anchor-link" href="#Accedere-e-modificare-i-dati-di-un-esemplare:-getters-and-setters">¶</a></h3><p>Abbiamo visto che se nell' <code>__init__</code> di una classe <code>C</code> è definito l'attributo <code>x</code> è possibile accedere al valore dell'attributo per un esemplare <code>es</code> con la notazione <code>es.x</code>.<br/>
+<h3 id="1.3.3-Accedere-e-modificare-i-dati-di-un-esemplare:-getters-and-setters">1.3.3 Accedere e modificare i dati di un esemplare: getters and setters<a class="anchor-link" href="#1.3.3-Accedere-e-modificare-i-dati-di-un-esemplare:-getters-and-setters">¶</a></h3><p>Abbiamo visto che se nell' <code>__init__</code> di una classe <code>C</code> è definito l'attributo <code>x</code> è possibile accedere al valore dell'attributo per un esemplare <code>es</code> con la notazione <code>es.x</code>.<br/>
 È però preferibile e fortemente incoraggiato accedere e modificare, dall'esterno della classe, gli attributi di un esemplare attraverso metodi appositi, detti getters e setters, che devono essere definiti all'interno della classe.</p>
 </div>
 </div>
@@ -8450,7 +8461,7 @@ name: None
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>Una delle idee basilari dell'Object Oriented programmi è di interagire con gli oggetti <strong>solamente</strong> attraverso le funzioni della classe, nascondendo i dettagli interni dell'implementazione.</p>
-<h2 id="Inheritance">Inheritance<a class="anchor-link" href="#Inheritance">¶</a></h2><p>Una classe può ereditare metodi e attributi da una superclasse già esistente.</p>
+<h2 id="1.4-Inheritance">1.4 Inheritance<a class="anchor-link" href="#1.4-Inheritance">¶</a></h2><p>Una classe può ereditare metodi e attributi da una superclasse già esistente.</p>
 <div style="padding:20px 20px 20px 50px;">
 <img alt="No description has been provided for this image" src="../Images/Hierarchies.png" width="900"/>
 </div>
