--- a/html/01a_NotebookBasic.html
+++ b/html/01a_NotebookBasic.html
@@ -7659,7 +7659,7 @@ Per vedere o modificare il formato originale delle celle di testo, cliccate due 
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Quando si scrive una serie di comandi è buona pratica utilizzare il comando <code>print</code> per tutti i risultati che si vogliono stampare sullo schermo perchè l'ordine e il numero dei comandi potrebbe essere modificato.</p>
+<p>Quando si scrive una serie di comandi è buona pratica utilizzare il comando <code>print</code> per tutti i risultati che si vogliono stampare sullo schermo perché l'ordine e il numero dei comandi potrebbe essere modificato.</p>
 </div>
 </div>
 </div>
