--- a/index.html
+++ b/index.html
@@ -222,15 +222,14 @@ Il materiale su Python disponibile sul web &egrave; talmente abbondante che dive
     <FONT SIZE="+1"><B>Tutorials di Python:</B></FONT>
 <UL>
 <li>
-<A HREF="https://realpython.com/learning-paths/python3-introduction/"> Real Python: Introduction to Python</A>
-<li>
 <A HREF="https://docs.python.org/3/tutorial/index.html">The Python Tutorial</A>
+<li>
+<A HREF="https://developers.google.com/edu/python">Google's Python Class</A>
 </UL>
     <FONT SIZE="+1"><B>Tutorial di Jupyter:</B></FONT>
 <UL>
 <li>
-<A HREF="https://realpython.com/jupyter-notebook-introduction/"> Real Python: Jupyters Notebook: An Introduction
-     </A>
+<A HREF="https://www.dataquest.io/blog/jupyter-notebook-tutorial/">How to Use Jupyter Notebook: A Beginner's Tutorial</A>
 </UL>
     <FONT SIZE="+1"><B>Libri/Lezioni:</B></FONT>
 <UL>
